--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,8 @@
-aside {
-    color: lightblue;
+:root {
+    --logo-image-size: calc(var(--header-height) * .7)
+}
+
+header img {
+    width: var(--logo-image-size);
+    height: var(--logo-image-size);
 }
